# sparse_inputs

./: LICENSE  README.md  environment.yml  pyproject.toml  setup.py
data/Burton_2022/: Fig1figsupp3source data 1_figS3_data.mat
data/Zak_2020/: Glomerular_Matrix.mat
data/Zak_2024/: mouse1_bouton1.csv  mouse1_bouton2.csv  mouse1_osn.csv  mouse2_bouton1.csv  mouse2_bouton2.csv  mouse2_osn.csv  mouse3_bouton1.csv  mouse3_osn.csv  odor_index.mat
odor_mix_code/: coding_model_fanofactor.py  decoding_workflow.py  paths.py
results/GLUE/: glomerular_poisson_gcmc_withshuffle_24bg_high_low_scale_0.0_10000points.csv
scripts/: 2-glue_analysis.ipynb  3-OSN_PiC_data.ipynb  3-glom_model_sparsity-deprecated.ipynb  3-glom_model_sparsity.ipynb  4-OSN_PiC_data.ipynb  4-sparse_expansive_code.ipynb  5-glom_data_sparsity.ipynb  5-sparse_expansive_code.ipynb  6-glom_data_sparsity-prepoisson.ipynb  6-glom_data_sparsity.ipynb  FigS8A_glom_sparsity.ipynb  FigS9A_sparse_exp_code.ipynb  README.md  coding_model_fanofactor.py
