[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odor-mix-code"
version = "0.1.0"
description = "Analysis code for sparse input representations in concentration-varying odor mixtures."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "h5py",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "joblib",
    "tqdm",
]

[tool.setuptools.packages.find]
include = ["odor_mix_code*"]
